After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743906 - quarktv: doesn't work with planes=0, fix property range accordingly
quarktv: doesn't work with planes=0, fix property range accordingly
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Linux
: Normal minor
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-02-03 04:48 UTC by Vineeth
Modified: 2015-03-28 11:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
launch error when planes is set as 0 (1.06 KB, patch)
2015-02-03 04:49 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-02-03 04:48:43 UTC
When planes property is set to 0, the pipeline executes in
an infinite loop and never exits
Since planes can never be 0, setting the minimum value as 1
Comment 1 Vineeth 2015-02-03 04:49:51 UTC
Created attachment 295992 [details] [review]
launch error when planes is set as 0
Comment 2 Tim-Philipp Müller 2015-03-28 11:35:34 UTC
Pushed, thanks for the patch:

commit fb5394dbf0b157f7dae03a6451272b0845971c9e
Author: Vineeth T M <vineeth.tm@samsung.com>
Date:   Tue Feb 3 10:18:58 2015 +0530

    quarktv: fix "planes" property range, a value of 0 is not allowed
    
    When planes property is set to 0, the pipeline executes in
    an infinite loop and never exits. Since planes must never
    be 0, set the minimum value in the property description
    to 1.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=743906